# algo-trading-app

./: .dockerignore  .firebaserc  .gitignore  ALPACA_INTEGRATION_COMPLETE.md  ANALYSIS_INDEX.md  BACKTEST_VERIFICATION_REPORT.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOY_DOCKER_PROPER.sh  DEPLOY_FINAL.sh  DEPLOY_FROM_LOCAL.sh  DEPLOY_PREBUILT.sh  DEPLOY_SIMPLE.sh  Dockerfile  FIREBASE_INTEGRATION.md  GEMINI.md  GUI_GUIDE.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_PROGRESS.md  LIVE_TRADING_ACTIVE_NOW.md  LIVE_TRADING_ANALYSIS.md  LIVE_TRADING_DEPLOYMENT_REPORT.md  LIVE_TRADING_GUIDE.md  LIVE_TRADING_SUMMARY.md  LIVE_TRADING_V2_5_CLOUD_GUIDE.md  LIVE_TRADING_V2_GUIDE.md  NEW_FEATURES_GUIDE.md  NEXT_STEPS_GUIDE.md  PHASE_7_BACKEND_IMPLEMENTATION_COMPLETE.md  PHASE_8_CHUNKING_FIX.md  PHASE_8_IMPLEMENTATION_COMPLETE.md  PHASE_8_SETUP_GUIDE.md  QUICKSTART.md  QUICK_START.md  QUICK_START_LIVE_TRADING.md  README.md  REDESIGN_SUMMARY.md  SENTIMENT_ML_GUIDE.md  START_HERE_LIVE_TRADING.md  (+56 more)
backend/: .env.example  .gitignore  ALPACA_INTEGRATION_PHASE2_SUMMARY.md  DATABASE_FIXES_SUMMARY.md  Dockerfile  PHASE3_IMPLEMENTATION_COMPLETE.md  PHASE3_IMPLEMENTATION_PLAN.md  PHASE4_ADVANCED_FEATURES_COMPLETE.md  README.md  _test_api.py  alembic.ini  apply_live_trading_migration.py  apply_market_data_cache_migration.py  apply_phase7_migration.py  create_missing_strategies.py  debug_schema.py  debug_startup.py  docker-compose.yml  gunicorn_conf.py  init_db.py  pyproject.toml  pytest.ini  requirements.txt  test_api.py  test_phase7_endpoints.py  test_phase9_e2e.py  (+2 more)
(+305 files in other folders)
